testsuite/tests/partial-sigs/should_fail/WildcardInTypeFamilyInstanceRHS.stderr

WildcardInTypeFamilyInstanceRHS.hs:8:25: error: [GHC-65507]
    Wildcard ‘_’ not allowed
      in the declaration for type synonym ‘Dual’
